--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 
 </head>
 <body>
-    <p id="basliklar"> deneme</p>
+    <div class="container">
+        <div class="row"></div>
+       <div class="links">
+            <a>deneme</a>
+            <a>deneme</a>
+            <a>deneme</a>
+        </div> 
+    </div>
+    
     <p class="paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, fugiat.</p>
 </body>
 </html>
