--- a/index.html
+++ b/index.html
@@ -4,19 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 
 </head>
 <body>
-    <div class="container">
-        <div class="row"></div>
-       <div class="links">
-            <a>deneme</a>
-            <a>deneme</a>
-            <a>deneme</a>
-        </div> 
+<nav class="navbar navbar-expand-lg bg-danger bg-opacity-90">
+  <div class="container-fluid ">
+    <div><a class="navbar-brand text-white" href="#">Nilüfer Özdin</a></div>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active text-white" aria-current="page" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" href="#">Contact</a>
+        </li>
+      </ul>
     </div>
-    
-    <p class="paragraf">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, fugiat.</p>
+  </div>
+</nav>
+<div class="bg-dark bg-gradient vh-100 d-flex flex-column align-items-center justify-content-center">
+  <p class="text-white fs-1">Hey I am Nilüfer</p>
+  <p class="text-danger">a web developer</p>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
